testsuite/tests/properties/invalid_at/test.out
== bad_arg_type/test.lkt ==
test.lkt:4:54: error: Expected type Int, got Bool
4 |     @exported fun bar_prop(): Int = node.singleton()[true]
  |                                                      ^^^^


== correct/test.lkt ==
Code generation was successful

== kwargs/test.lkt ==
test.lkt:4:37: error: Cannot parse <basic_expr>
4 |     @exported fun bar_prop(): Int = node.singleton()[index=12]
  |                                     ^^^^

test.lkt:4:59: error: Expected ']', got '='
4 |     @exported fun bar_prop(): Int = node.singleton()[index=12]
  |                                                           ^

test.lkt:4:59: error: Skipped token =
4 |     @exported fun bar_prop(): Int = node.singleton()[index=12]
  |                                                           ^

test.lkt:4:60: error: Skipped token 12
4 |     @exported fun bar_prop(): Int = node.singleton()[index=12]
  |                                                            ^^

test.lkt:4:62: error: Skipped token ]
4 |     @exported fun bar_prop(): Int = node.singleton()[index=12]
  |                                                              ^


== no_arg/test.lkt ==
test.lkt:4:37: error: Cannot parse <basic_expr>
4 |     @exported fun bar_prop(): Int = node.singleton()[]
  |                                     ^^^^

test.lkt:4:54: error: Expected '[', got ']'
4 |     @exported fun bar_prop(): Int = node.singleton()[]
  |                                                      ^

test.lkt:4:54: error: Skipped token ]
4 |     @exported fun bar_prop(): Int = node.singleton()[]
  |                                                      ^


== too_many_args/test.lkt ==
test.lkt:4:37: error: Cannot parse <basic_expr>
4 |     @exported fun bar_prop(): Int = node.singleton()[0, 12]
  |                                     ^^^^

test.lkt:4:55: error: Expected ']', got ','
4 |     @exported fun bar_prop(): Int = node.singleton()[0, 12]
  |                                                       ^

test.lkt:4:55: error: Skipped token ,
4 |     @exported fun bar_prop(): Int = node.singleton()[0, 12]
  |                                                       ^

test.lkt:4:57: error: Skipped token 12
4 |     @exported fun bar_prop(): Int = node.singleton()[0, 12]
  |                                                         ^^

test.lkt:4:59: error: Skipped token ]
4 |     @exported fun bar_prop(): Int = node.singleton()[0, 12]
  |                                                           ^


lkt_compile: Done
